# Mathlib

./: .gitignore  CMakeLists.txt  README.md  RootFinding.h
include/: CoordSystemGeneral.h  CoordSystems.h  CoordSystems2D.h  CoordSystems3D.h  Derivation.h  ElectromagneticTensor.h  Fields.h  Function.h  Integration.h  MML.h  MMLBase.h  Manifold.h  Matrix.h  MatrixOperations.h  MatrixStatic.h  MetricTensor.h  Polynom.h  VectorN.h  VectorStatic.h
include/abstract_math/: Group.h
include/differential_geometry/: Manifold.h
include/geometry/: CoordSystems3D.h
include/physics/: BrownMotionSimulator.h  Gravity.h  PhysicsConstants.h
lib/: finite_difference.hpp
old_src/: RootFinding.cpp  Vector.cpp  matrix.h  vector.h
src/: CMakeLists.txt  Matrix.cpp  TODO.txt  simple_app.cpp  test_coord_systems.cpp  test_fields.cpp  test_function.cpp  test_gravity_field.cpp  test_integration.cpp  test_metric_tensor.cpp  test_polynom.cpp  test_speed_functions.cpp  test_vector_matrix.cpp
src/include/: calc.h  mathlib.h  vector.h
src/src/: Matrix.cpp  Vector.cpp  calc.cpp  simple_app.cpp
src/tests/: calc_tests.cpp  vector_tests.cpp
tests/: derivation_tests.cpp  vector_tests.cpp
